finished project, holders api, impl role and message
