# src/apis/routers/v1/message.routes.js
@@ -1,0 +1,17 @@
+const express = require("express");
+const {
+  getAllMessages,
+  updateMessageById,
+  deleteMessageById,
+  newMessage,
+} = require("../../controllers/message.controller");
+
+const router = express.Router();
+
+//@NON: Project routes
+
+router.get("/:discordGuildId", getAllMessages);
+router.put("/:discordGuildId", updateMessageById);
+router.post("/new", newMessage);
+
+module.exports = router;
