# src/apis/routers/v1/role.routes.js
@@ -1,0 +1,17 @@
+const express = require("express");
+const {
+  getAllRoles,
+  updateRoleById,
+  deleteRoleById,
+  newRole,
+} = require("../../controllers/role.controller");
+
+const router = express.Router();
+
+//@NON: Project routes
+
+router.get("/:discordGuildId", getAllRoles);
+router.put("/:discordGuildId", updateRoleById);
+router.post("/new", newRole);
+
+module.exports = router;
