# src/database/models/project.model.js
@@ -35,16 +35,6 @@ Project.init(
       type: DataTypes.STRING,
       allowNull: true,
     },
-    roles: {
-      // type: DataTypes.ARRAY(DataTypes.STRING),
-      type: DataTypes.STRING,
-      allowNull: false,
-    },
-    messages: {
-      // type: DataTypes.ARRAY(DataTypes.STRING),
-      type: DataTypes.STRING,
-      allowNull: true,
-    },
     website: {
       type: DataTypes.STRING,
       allowNull: true,
